--- a/BulkyBook/BulkyBook/BulkyBook.csproj
+++ b/BulkyBook/BulkyBook/BulkyBook.csproj
@@ -22,7 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\Category\" />
   </ItemGroup>
 
 </Project>
