--- a/BulkyBook/BulkyBook/BulkyBook.csproj
+++ b/BulkyBook/BulkyBook/BulkyBook.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.24" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="Stripe.net" Version="39.112.0" />
   </ItemGroup>
 
   <ItemGroup>
